--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 		<title>Document</title>
 	</head>
 	<body>
+		<div id="newDiv"></div>
+		<img
+			src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpre-inscription.supmti.ac.ma%2F%3Fa%3Dmonkey-puppet-know-your-meme-gg-qWev0jcD&psig=AOvVaw0CTKmg4kAh_JvUw-FbcLBZ&ust=1706311109563000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCIDH8q_W-YMDFQAAAAAdAAAAABAI"
+			id="myPic"
+			style="display: none"
+		/>
 		<h1>Timer</h1>
 		<input
 			type="number"
