--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 		/>
 		<title>Document</title>
 	</head>
-	<div id="timerAPP">
-		<body>
-			<div id="newDiv"></div>
-			<h1>Timer</h1>
-			<input
-				type="number"
-				id="timer"
-			/>
-			<button id="timerBtn">Start</button>
-			<p id="timerSpace"></p>
-		</body>
-	</div>
+	<body>
+		<div id="timerAPP">
+			<div id="innerSquare">
+				<h1 id="timerTitle">Timer</h1>
+				<input
+					type="number"
+					id="timer"
+				/>
+				<button id="timerBtn">Start</button>
+
+				<p id="timerSpace"></p>
+			</div>
+		</div>
+	</body>
 	<script src="script.js"></script>
 </html>
